# Virtual-Library

./: AudioCD.cpp  AudioCD.h  Book.cpp  Book.h  CMakeLists.txt  Cassete.cpp  Cassete.h  InformationCarrier.cpp  InformationCarrier.h  Magazine.cpp  Magazine.h  VideoCassette.cpp  VideoCassette.h  main.cpp
